feature/long-json-in-metadata (#412)
* Type and FormData of MetadataField upgraded

* MetadataFieldFormData fixed

* metadata refactor

* review fixes

* JSON type added to MetadataItem component

* metadata item styles resolved

* button icons added

* action buttons moved up

* JSON width and white spaces

* edit field refactoring

* layout changes for review

* warnings fixed

* Changed transform prop on DropdownIcon.tsx

* renaming and refactoring

* try catch returned

Co-authored-by: damirabdullin <dabdullin@provectus.com>
Co-authored-by: alexeykozyurov <akozyurov@provectus.com>